--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,13 @@ jobs:
           TARGET_BRANCH: 'main2'
         run: |
           files=$(find $SRC_FOLDER_PATH -type f) # get the file list
-          copy -r --exclude .git ./* tmp/
+          cp -r --exclude .git ./* tmp/
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git fetch                         # fetch branches
           git checkout $TARGET_BRANCH       # checkout to your branch
           git checkout ${GITHUB_REF##*/} -- $files # copy files from the source branch
-          move tmp/ dev/  
+          mv tmp/ dev/  
           git add -A
           git diff-index --quiet HEAD ||  git commit -am "deploy files"  # commit to the repository (ignore if no modification)
           git push origin $TARGET_BRANCH # push to remote branch
