--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           TARGET_BRANCH: 'main2'
         run: |
           files=$(find $SRC_FOLDER_PATH -type f) # get the file list
-          cp -r --exclude .git ./* tmp/
+          rsync -av ./* tmp/ --exclude .git
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git fetch                         # fetch branches
