--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: copy
         env:
-          TARGET_BRANCH: 'main2'
+          TARGET_BRANCH: 'main'
         run: |
           rsync -av ./* tmp/ --exclude .git
           git config --global user.name 'GitHub Action'
